# GaussianMesh

./: LICENSE  README.md  convert_data.py  edit.py  metrics.py  render.py  test.sh  test2.sh  train_bg_gaussian.py  train_mesh_gaussian.py
arguments/: __init__.py
edittool/: __init__.py  bg_gaussian.py  camera_utils.py  gaussian_render.py  general_utils.py  graphics_utils.py  mesh_based_gaussian.py  pose_utils.py  sh_utils.py
gaussian_renderer/: __init__.py  network_gui.py
gaussian_renderer/diff_gaussian_rasterizater/: CMakeLists.txt  __init__.py  rasterize_points.py  rasterize_points_deformed.py
gaussian_renderer/diff_gaussian_rasterizater/cuda_rasterizer/: auxiliary.h  forward.cu  rasterizer.h  rasterizer_impl.cu
lpips_jittor/: lpips.py  pretrained_networks.py  readme.md
mesh_preprocess/: README.md  colmap.py  convert_mesh.py
scene/: __init__.py  cameras.py  dataset_readers.py  gaussian_model.py  mesh_based_gaussian_model.py
scene/simple_knn/: CMakeLists.txt  __init__.py
utils/: camera_utils.py  general_utils.py  graphics_utils.py  image_utils.py  loss_utils.py  sh_utils.py
